fixed
added try-catch, added new junit tests

Issue #561